packages/ncurses/ncurses.h

/*
#ifdef NCURSES_NOMACROS
#define NCURSES_ATTR_T attr_t
#endif

#ifndef NCURSES_ATTR_T
#define NCURSES_ATTR_T int
#endif

#ifndef NCURSES_CONST
#define NCURSES_CONST 
#endif
*/

typedef unsigned long chtype;
/*
typedef struct screen  SCREEN;
typedef struct _win_st WINDOW;
*/

typedef	chtype	attr_t;
				
extern WINDOW *derwin(WINDOW *,int,int,int,int);
				
extern WINDOW *dupwin(WINDOW *);
				
extern WINDOW *getwin(FILE *);
			
extern WINDOW *initscr(void);
			
extern const char *keyname(int);
			
extern char *longname(void);
					
extern WINDOW *newpad(int,int);
				
extern SCREEN *newterm(const char *,FILE *,FILE *);
	
extern WINDOW *newwin(int,int,int,int);
			
extern int ripoffline(int, int (*init)(WINDOW *, int));
			
extern SCREEN *set_term(SCREEN *);
				
extern char *slk_label(int);
				
extern WINDOW *subpad(WINDOW *, int, int, int, int);
	
extern WINDOW *subwin(WINDOW *,int,int,int,int);
	
extern int syncok(WINDOW *, bool);
			
extern chtype termattrs(void);
				
extern char *termname(void);
				
extern int tigetflag(const char *);
			
extern int tigetnum(const char *);
			
extern char *tigetstr(const char *);
			
extern int typeahead(int);
				
extern int ungetch(int);
				
extern void use_env(bool);
				
extern int vidattr(chtype);
				
extern int vidputs(chtype, int (*)(int));
		
extern int vwprintw(WINDOW *,const char *,va_list);
	
extern int vwscanw(WINDOW *,const char *,va_list);
	
extern int waddch(WINDOW *, const chtype);
		
extern int waddchnstr(WINDOW *,const chtype *const,int);
 
extern int waddnstr(WINDOW *,const char *const,int);
	
extern int wattr_on(WINDOW *, const attr_t);
		
extern int wattr_off(WINDOW *, const attr_t);
		
extern int wbkgd(WINDOW *,const chtype);
		
extern void wbkgdset(WINDOW *,chtype);
			
extern int wborder(WINDOW *,chtype,chtype,chtype,chtype,chtype,chtype,chtype,chtype);
	
extern int wchgat(WINDOW *, int, attr_t, short, const void *);
extern int wclear(WINDOW *);
				
extern int wclrtobot(WINDOW *);
				
extern int wclrtoeol(WINDOW *);
				
extern void wcursyncup(WINDOW *);
			
extern int wdelch(WINDOW *);
				
extern int wechochar(WINDOW *, const chtype);
		
extern int werase(WINDOW *);
				
extern int wgetch(WINDOW *);
				
extern int wgetnstr(WINDOW *,char *,int);
		
extern int whline(WINDOW *, chtype, int);
		
extern int winchnstr(WINDOW *, chtype *, int);
		
extern int winnstr(WINDOW *, char *, int);
		
extern int winsch(WINDOW *, chtype);
			
extern int winsdelln(WINDOW *,int);
			
extern int winsnstr(WINDOW *, const char *,int);
	
extern int wmove(WINDOW *,int,int);
			
extern int wnoutrefresh(WINDOW *);
			
/*
extern int wprintw(WINDOW *,const char *,...)		
		GCC_PRINTFLIKE(2,3);
*/
extern int wredrawln(WINDOW *,int,int);
			
extern int wrefresh(WINDOW *);
				
/*
extern int wscanw(WINDOW *,const char *,...)		
		GCC_SCANFLIKE(2,3);
*/
extern int wscrl(WINDOW *,int);
				
extern int wsetscrreg(WINDOW *,int,int);
		
extern void wsyncdown(WINDOW *);
			
extern void wsyncup(WINDOW *);
				
extern int wtimeout(WINDOW *,int);
			
extern int wtouchln(WINDOW *,int,int,int);
		
extern int wvline(WINDOW *,chtype,int);
#define A_NORMAL	0L
/*
#define A_ATTRIBUTES	NCURSES_BITS(~(1UL - 1UL),0)
*/
#define A_CHARTEXT	(NCURSES_BITS(1UL,0) - 1UL)
#define A_COLOR		NCURSES_BITS(((1UL) << 8) - 1UL,0)
#define A_STANDOUT	NCURSES_BITS(1UL,8)
#define A_UNDERLINE	NCURSES_BITS(1UL,9)
#define A_REVERSE	NCURSES_BITS(1UL,10)
#define A_BLINK		NCURSES_BITS(1UL,11)
#define A_DIM		NCURSES_BITS(1UL,12)
#define A_BOLD		NCURSES_BITS(1UL,13)
#define A_ALTCHARSET	NCURSES_BITS(1UL,14)
#define A_INVIS		NCURSES_BITS(1UL,15)
#define A_PROTECT	NCURSES_BITS(1UL,16)
#define A_HORIZONTAL	NCURSES_BITS(1UL,17)
#define A_LEFT		NCURSES_BITS(1UL,18)
#define A_LOW		NCURSES_BITS(1UL,19)
#define A_RIGHT		NCURSES_BITS(1UL,20)
#define A_TOP		NCURSES_BITS(1UL,21)
#define A_VERTICAL	NCURSES_BITS(1UL,22)
#define PAIR_NUMBER(a)	(((a) & A_COLOR) >> 8)
/*
 * pseudo functions
 */
#define wgetstr(w, s)		wgetnstr(w, s, -1)
#define getnstr(s, n)		wgetnstr(stdscr, s, n)
#define setterm(term)		setupterm(term, 1, (int *)0)
#define fixterm()		reset_prog_mode()
#define resetterm()		reset_shell_mode()
#define saveterm()		def_prog_mode()
#define crmode()		cbreak()
#define nocrmode()		nocbreak()
/*
#define getyx(win,y,x)   	(y = (win)?(win)->_cury:ERR, x = (win)?(win)->_curx:ERR)
#define getbegyx(win,y,x)	(y = (win)?(win)->_begy:ERR, x = (win)?(win)->_begx:ERR)
#define getmaxyx(win,y,x)	(y = (win)?((win)->_maxy + 1):ERR, x = (win)?((win)->_maxx + 1):ERR)
#define getparyx(win,y,x)	(y = (win)?(win)->_pary:ERR, x = (win)?(win)->_parx:ERR)
*/
#define getsyx(y,x)		getyx(stdscr, y, x)
/*
#define setsyx(y,x)		(stdscr->_cury = y, stdscr->_curx = x)
*/


#define getattrs(win)		((win)?(win)->_attrs:A_NORMAL)
#define getcurx(win)		((win)?(win)->_curx:ERR)
#define getcury(win)		((win)?(win)->_cury:ERR)
#define getbegx(win)		((win)?(win)->_begx:ERR)
#define getbegy(win)		((win)?(win)->_begy:ERR)
#define getmaxx(win)		((win)?((win)->_maxx + 1):ERR)
#define getmaxy(win)		((win)?((win)->_maxy + 1):ERR)
#define getparx(win)		((win)?(win)->_parx:ERR)
#define getpary(win)		((win)?(win)->_pary:ERR)
/*
#define winch(win)       	((win)?(win)->_line[(win)->_cury].text[(win)->_curx]:0)
*/
#define wstandout(win)      	(wattr_set(win,A_STANDOUT))
#define wstandend(win)      	(wattr_set(win,A_NORMAL))
/*
#define wattr_set(win,at)    	((win)?((win)->_attrs = (at)):0)
*/

#define wattron(win,at)		wattr_on(win, at)
#define wattroff(win,at)	wattr_off(win, at)
#define wattrset(win,at)    	wattr_set(win, at)