packages/extra/ncurses/ncurses.pp


    Function syncok(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function termattrs:chtype; cdecl;external;

    Function tigetflag(_para1:pchar):longint; cdecl;external;

    Function tigetnum(_para1:pchar):longint; cdecl;external;

    Function derwin (_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint; _para5:longint):PWINDOW; cdecl;external;
    Function dupwin (_para1:pWINDOW):PWINDOW; cdecl;external;
    Function getwin (_para1:pFILE):PWINDOW; cdecl;external;
    Function initscr :PWINDOW; cdecl;external;
    Function keyname  (_para1:longint):pchar; cdecl;external;
    Function longname :pchar; cdecl;external;
    Function newpad (_para1:longint; _para2:longint):PWINDOW; cdecl;external;
    Function newterm (_para1:pchar; _para2:pFILE; _para3:pFILE):PSCREEN; cdecl;external;
    Function newwin  (_para1:longint; _para2:longint; _para3:longint; _para4:longint):PWINDOW; cdecl;external;
    Function set_term (_para1:pSCREEN):PSCREEN; cdecl;external;
    Function slk_label (_para1:longint):pchar; cdecl;external;
    Function subpad (_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint; _para5:longint):PWINDOW; cdecl;external;
    Function subwin (_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint; _para5:longint):PWINDOW; cdecl;external;
    Function termname :pchar; cdecl;external;
    Function tigetstr (_para1:pchar):pchar; cdecl;external;
    Function typeahead(_para1:longint):longint; cdecl;external;
    Function ungetch(_para1:longint):longint; cdecl;external;
    procedure use_env(_para1:bool);cdecl;external;
    Function vidattr(_para1:chtype):longint; cdecl;external;
{
    Function vidputs(_para1:chtype; _para2:function (_para1:longint):longint):longint; cdecl;external;
}
{
    Function vwprintw(_para1:pWINDOW; _para2:pchar; _para3:va_list):longint; cdecl;external;
    Function vwscanw(_para1:pWINDOW; _para2:pchar; _para3:va_list):longint; cdecl;external;
}
    Function waddch(_para1:pWINDOW; _para2:chtype):longint; cdecl;external;
    Function waddchnstr(_para1:pWINDOW; _para2:pchtype; _para3:longint):longint; cdecl;external;
    Function waddnstr(_para1:pWINDOW; _para2:pchar; _para3:longint):longint; cdecl;external;
    Function wattr_on(_para1:pWINDOW; _para2:attr_t):longint; cdecl;external;
    Function wattr_off(_para1:pWINDOW; _para2:attr_t):longint; cdecl;external;
    Function wattr_set(win : pwindow; at : longint) : longint; cdecl;external;
    function wattron(win : pwindow;at : longint) : longint; cdecl;external;
    function wattroff(win : pwindow;at : longint) : longint; cdecl;external;
    function wattrset(win : pwindow;at : longint) : longint; cdecl;external;
    Function wbkgd(_para1:pWINDOW; _para2:chtype):longint; cdecl;external;
    procedure wbkgdset(_para1:pWINDOW; _para2:chtype);cdecl;external;
    Function wborder(_para1:pWINDOW; _para2:chtype; _para3:chtype; _para4:chtype; _para5:chtype;
               _para6:chtype; _para7:chtype; _para8:chtype; _para9:chtype):longint;cdecl;external;
    Function wchgat(_para1:pWINDOW; _para2:longint; _para3:attr_t; _para4:longint; _para5:pointer):longint; cdecl;external;
    Function wclear(_para1:pWINDOW):longint; cdecl;external;
    Function wclrtobot(_para1:pWINDOW):longint; cdecl;external;
    Function wclrtoeol(_para1:pWINDOW):longint; cdecl;external;
    procedure wcursyncup(_para1:pWINDOW);cdecl;external;
    Function wdelch(_para1:pWINDOW):longint; cdecl;external;
    Function wechochar(_para1:pWINDOW; _para2:chtype):longint; cdecl;external;
    Function werase(_para1:pWINDOW):longint; cdecl;external;
    Function wgetch(_para1:pWINDOW):longint; cdecl;external;
    Function wgetnstr(_para1:pWINDOW; _para2:pchar; _para3:longint):longint; cdecl;external;
    Function whline(_para1:pWINDOW; _para2:chtype; _para3:longint):longint; cdecl;external;
    Function winch (win : PWindow) : longint; cdecl;external;
    Function winchnstr(_para1:pWINDOW; _para2:pchtype; _para3:longint):longint; cdecl;external;
    Function winnstr(_para1:pWINDOW; _para2:pchar; _para3:longint):longint; cdecl;external;
    Function winsch(_para1:pWINDOW; _para2:chtype):longint; cdecl;external;
    Function winsdelln(_para1:pWINDOW; _para2:longint):longint; cdecl;external;
    Function winsnstr(_para1:pWINDOW; _para2:pchar; _para3:longint):longint; cdecl;external;
    Function wmove(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    Function wnoutrefresh(_para1:pWINDOW):longint; cdecl;external;
    {
    extern int wprintw(WINDOW  ,const char  ,...)
                GCC_PRINTFLIKE(2,3);
    }
    Function wredrawln(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    Function wrefresh(_para1:pWINDOW):longint; cdecl;external;
    {
    extern int wscanw(WINDOW  ,const char  ,...)
                GCC_SCANFLIKE(2,3);
    }
    Function wscrl(_para1:pWINDOW; _para2:longint):longint; cdecl;external;
    Function wsetscrreg(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    procedure wsyncdown(_para1:pWINDOW);cdecl;external;
    procedure wsyncup(_para1:pWINDOW);cdecl;external;
    Function wtimeout(_para1:pWINDOW; _para2:longint):longint; cdecl;external;
    Function wtouchln(_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint):longint; cdecl;external;
    Function wvline(_para1:pWINDOW; _para2:chtype; _para3:longint):longint; cdecl;external;
    Function mvwchgat(_para1:pWINDOW; _para2:longint; _para3:longint;
                      _para4:longint; _para5:longint; _para6:longint;
                      _para7:longint):longint;cdecl;external;
    Function PAIR_NUMBER(_para1:longint):longint;cdecl;external;

    const
           A_NORMAL = 0;
           A_ATTRIBUTES = (not 0) shl 8;
           A_CHARTEXT=(1 shl (0 + 8)) - 1;
           A_COLOR=((1 shl 8) - 1) shl 8;
           A_STANDOUT = 1 shl (8 + 8);
           A_UNDERLINE = 1 shl (9 + 8);
           A_REVERSE = 1 shl (10 + 8);
           A_BLINK = 1 shl (11 + 8);
           A_DIM = 1 shl (12 + 8);
           A_BOLD = 1 shl (13 + 8);
           A_ALTCHARSET = 1 shl (14 + 8);
           A_INVIS = 1 shl (15 + 8);
           A_PROTECT = 1 shl (16 + 8);
           A_HORIZONTAL = 1 shl (17 + 8);
           A_LEFT = 1 shl (18 + 8);
           A_LOW = 1 shl (19 + 8);
           A_RIGHT = 1 shl (20 + 8);
           A_TOP = 1 shl (21 + 8);
           A_VERTICAL = 1 shl (22 + 8);
     Function color_pair(n : longint): longint;
{
           PAIR_NUMBER = (a(@(A_COLOR))) shr 8;
}

    {
       pseudo functions
     }
    function wgetstr(w : pwindow;s : pchar) : longint;
    function getnstr(s : pchar;n : longint) : longint;
    function setterm(term : longint) : longint;
    function fixterm : longint;
    function resetterm : longint;
    function saveterm : longint;
    function crmode : longint;
    function nocrmode : longint;
    procedure getyx   (win : pwindow; var y,x : longint);
    procedure getbegyx(win : pwindow; var y,x : longint);
    procedure getmaxyx(win : pwindow; var y,x : longint);
    procedure getparyx(win : pwindow; var y,x : longint);
    Procedure getsyx  (var y,x : longint);
    procedure setsyx (y,x : longint);
    function getattrs(win : pwindow) : longint;
    function getcurx(win : pwindow) : longint;
    function getcury(win : pwindow) : longint;
    function getbegx(win : pwindow) : longint;
    function getbegy(win : pwindow) : longint;
    function getmaxx(win : pwindow) : longint;
    function getmaxy(win : pwindow) : longint;
    function getparx(win : pwindow) : longint;
    function getpary(win : pwindow) : longint;
    function wstandout(win : pwindow) : longint;
    function wstandend(win : pwindow) : longint;
{kjw, 08/24/2000, changed to cdecl; external
    function wattr_set(win : pwindow; at : longint) : longint;
    function wattron(win : pwindow;at : longint) : longint;
    function wattroff(win : pwindow;at : longint) : longint;
    function wattrset(win : pwindow;at : longint) : longint;
}
